/*#ifndef TRANSMITOR
#define TRANSMITOR

#include "IBluetooth.h" //for Bluetooth
#include <iostream> // for std::cout

//template
class Transmitor : public IBluetooth
{
public:
  void DataTransmitor() const override
  {
    //std::cout << "5.6 Mol/L" << std::endl;
  }
};

#endif*/