#ifndef IDATAPROVIDER
#define IDATAPROVIDER

class IDataProvider
{
public:
  virtual float Provide() =0;
};

#endif