#ifndef ICALCULATE
#define ICALCULATE

class ICalculate
{
public:
  virtual void Calculate() const=0;
};

#endif