@startuml main 

interface IThread
{
    + void Execute () = 0
}
class MeasureGlycemiaTask
{
    Реализует измерение
    гликемии

    + void Execute ()
}
class Glycemia
{
    Преобразует полученные
    значения температуры в
    значения гликемии

     + void Calculate ()
}

class Temperature
{
    Преобразует частоту
    в температуру

     + void Calculate ()
}

class Frequency
{
     возможно удалить и 
     таймеры подсоединить
     сразу к температуре
     
     + void Calculate ()
}

IThread <|-down- MeasureGlycemiaTask
ICalculate -up-o MeasureGlycemiaTask
ICalculate <|-- Glycemia
ICalculate --o Glycemia
Temperature -up-|> ICalculate
ICalculate --o Temperature
Frequency -up-|> ICalculate

class BluetoothGlycemiaTask
{
    Реализует передачу
    информации

     + void Execute ()
}
class USART2
{
    Преобразует нформацию
    для передачи данных
    
    + {abstract} DataLineUsart ()
}
class Transmitor
{
    Отправляет запрошенную
    информацию
    
    + {abstract} DataTransmitor ()
}
interface ICalculate
{
    Обеспечивает перерасчет
    значений

    + void Calculate () = 0
}

class Information
{
    Преобразует информацию
    в строку
    
    + {abstract} DataLine ()
}
interface IBluetooth
{
    Обеспчечивает передачу 
    информации по беспроводному
    интерфейсу
}
interface IUSART
{
    Обеспечивает преобразование 
    нформации для передачи 
    данных
}
interface IConverter
{
    Конвертирует информацию 
    и передает для передачи 
    по Bluetooth
}
interface IDataProvider
{
    Обеспечивает передачу 
    информации для дальнейшего 
    преобразования в строку
}

IThread <|-- BluetoothGlycemiaTask
BluetoothGlycemiaTask o-- IBluetooth
Transmitor -up-|> IBluetooth
IUSART -up-o Transmitor
USART2 -up-|> IUSART
Information -up-|> IConverter
IConverter -up-o BluetoothGlycemiaTask
Information o.up.IDataProvider
Glycemia --|> IDataProvider



interface ITimer
{
    Обеспечивает считывание
    информации полученной
    таймером

    + void count () = 0
}
class Timer2
{
    Считает кол-во импульсов
    пришедших на него за период 
    установленный RTC

    + void count ()
}

ITimer -up-o Frequency
Timer2 -up-|> ITimer

class BatteryTask
{
    Реализует передачу
    информации о
    состоянии заряда
    батареи

     + void Execute ()
}
class ADC
{
    Получает нформацию
    о состоянии заряда батареи
}

IThread <|-- BatteryTask
ICalculate -up-o BatteryTask
ICalculate <|-- ADC


BatteryTask --|> IDataProvider

@enduml
// необходимо добавить классы и интерфейсы
// для передачи информации о состоянии
//батареи по Bluetooth